just update the index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<title>WqZeng</title>
 </head>
 <body>
-	<h1>Coming Soon!</h1>
+	<div style="text-align:center;">
+		<h1>Coming Soon!</h1>
+		<h2>
+			I am crazy busy in building a blog framework.
+			<br />
+			Just waiting, things are aways got best in the future.
+		</h2>
+	</div>
 </body>
 </html>
