use sea.js in temporary

--- a/index.html
+++ b/index.html
@@ -14,4 +14,11 @@
 		</h2>
 	</div>
 </body>
+<script type="text/javascript" src="./saber/sea.js"></script>
+<script type="text/javascript">
+	seajs.config({
+		base: "./saber/"
+	});
+	seajs.use("s.js");
+</script>
 </html>
