Init my home page

--- a/index.html
+++ b/index.html
@@ -1,75 +1,170 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Vqun.github.io by vqun</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Vqun.github.io by vqun</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <style type="text/css">
+  @font-face {
+    font-family: 'BebasNeueRegular';
+    src: url('./css/font/bebasneue-webfont.eot');
+    src: url('./css/font/bebasneue-webfont.eot?#iefix') format('eot'),
+    url('./css/font/bebasneue-webfont.woff') format('woff'),
+    url('./css/font/bebasneue-webfont.ttf') format('truetype'),
+    url('./css/font/bebasneue-webfont.svg#webfontX0YNjQNl') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+  body{
+    font-size: 10px;
+    font-family: 'BebasNeueRegular';
+    background: url(./images/bg/body_bg.jpg) no-repeat 0 0;
+  }
+  header{
+    color: #C2BDB7;
+    font-family: 'BebasNeueRegular';
+    font-size: 40px;
+    line-height: 1em;
+    padding: .6em 1em .6em 1.5em;
+    position: absolute;
+    top: -2.2em;
+    left: 0;
+    background-color: white;
+  }
+  section.menu{
+    width: 80em;
+    height: auto;
+    position: absolute;
+    z-index: 10;
+    top: 30%;
+    left: 50%;
+    margin-left: -40em;
+  }
+  .clear{
+    clear:both;
+  }
+  nav{
+    float:left;
+    background-color: rgba(235,44,6,0.8);
+    width:100%;
+  }
+  .nav, aside ul{
+    margin: 0;
+    padding: 0;
+    float:left;
+  }
+  .nav{
+    margin-right: 16em;
+    padding-left: 3em;
+  }
+  .nav li, aside ul li{
+    float: left;
+    list-style: none;
+    padding: 3em 0 3em 3em;
+  }
+  aside ul li {
+    padding: 1em 0 1em 1em;
+  }
+  .nav li a, aside ul li a{
+    letter-spacing: 1px;
+    color: #e1dcd6;
+    font-size: 25px;
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
+    text-shadow: 0 1px 4px rgba(0,0,0,0.75);
+  }
+  .nav li a.active, .nav li a:hover{
+    color: white;
+    transition: color .2s linear;
+    -webkit-transition: color .2s linear;
+    text-shadow: none;
+  }
+  aside ul li a{
+    opacity: 0.6;
+    color: #eb2828
+  }
+  aside ul li a:hover{
+    opacity: 1;
+    -webkit-transition: opacity .5s linear;
+    text-shadow: 0 1px 4px rgba(255,255,255,1);
+  }
+  aside{
+    padding-left: 1em;
+    float:right;
+    background: #fff;
+    margin-left: -16em;
+    margin-top: 2.5em;
+  }
+  aside ul li:last-child a{padding-right:1em;}
+  aside ul li a{
+    font-size: 15px;
+  }
+  .slider_bg{
+    width:100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    overflow: hidden;
+    top:0;
+    left:0;
+  }
+  .slider_bg ul{
+    width: 10000px;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  .slider_bg ul li{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    float:left;
+  }
+  .slider_bg ul li img{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  </style>
+</head>
+<body>
+  <div style="background-color:#ef5638;width:100%;height:5px;position:fixed;top:0;left:0;z-index:1000"></div>
+  <section class="menu">
+    <header>VQUN</header>
+    <nav>
+      <ul class="nav">
+        <li><a href="#" class="active">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">PROJECTS</a></li>
+      </ul>
+      <br class="clear" />
+    </nav>
+    <aside>
+      <ul>
+        <li><a href="http://weibo.com/345727572" target="_blank"><img src="./images/icon/wb_16.png" alt="@ZengWq572">&nbsp;&nbsp;WEIBO</a></li>
+        <li><a href="http://user.qzone.qq.com/842885572" target="_blank"><img src="./images/icon/qq_16.png" alt="@ZengWq572">&nbsp;&nbsp;QZONE</a></li>
+      </ul>
+      <br class="clear" />
+    </aside>
+  </section>
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/vqun">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>Vqun.github.io</h1>
-          <p>Vqun's Life in Github</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/vqun">vqun</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+  <!-- <section style="font-size:15px;position:absolute;z-index:99;display:block;width:54.4em;height:20em;overflow-y:scroll;left:50%;margin-left:-27.2em;bottom:10em;background-color:#fff;">
+    <article>
+      <p>ABOUT</p>
+    </article>
+  </section> -->
+  <div class="slider_bg" onselectstart="return false" oncopy="return false" oncut="return false" oncontextmenu="return false">
+    <ul id="sliderBg">
+      <li><img src="./images/bg/slider_bg_1.jpg" alt=""></li>
+      <li><img src="./images/bg/slider_bg_2.jpg" alt=""></li>
+      <li><img src="./images/bg/slider_bg_3.jpg" alt=""></li>
+      <li><img src="./images/bg/slider_bg_4.jpg" alt=""></li>
+      <br class="clear" />
+    </ul>
+  </div>
+</body>
 </html>
