--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Vqun.github.io by vqun</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/plugins/tagCloud.css">
 </head>
 <body>
   <div style="background-color:#ef5638;width:100%;height:5px;position:fixed;top:0;left:0;z-index:1000"></div>
@@ -53,6 +54,7 @@
       <article>
         <h1>项目</h1>
         <p>有简单，有趣，有意义的东西，充满个人想法。</p>
+        <p><button value="TagCloudTest" id="TagCloudTest">TagCloudTest</button></p>
       </article>
       <article>
         <h1>Projects</h1>
@@ -156,6 +158,59 @@
     }
     actions.init();
     $.on(menuEl, "click", actions.modAct);
+  })(Saber)
+</script>
+<script type="text/javascript" src="./js/plugins/tagCloud.js"></script>
+<script type="text/javascript">
+  (function($){
+    var btn = $.id("TagCloudTest");
+    var tagCloud = null;
+    $.on(btn, "click", function(e) {
+      tagCloud = $.plugins.tagCloud({
+        "data": [{
+          "url": "http://www.sina.com.cn",
+          "tag": "Sina"
+        },{
+          "url": "http://www.baidu.com",
+          "tag": "Baidu"
+        },{
+          "url": "http://weibo.com",
+          "tag": "Weibo"
+        },{
+          "url": "http://www.sina.com.cn",
+          "tag": "Sina"
+        },{
+          "url": "http://www.baidu.com",
+          "tag": "Baidu"
+        },{
+          "url": "http://www.sina.com.cn",
+          "tag": "Sina"
+        },{
+          "url": "http://www.baidu.com",
+          "tag": "Baidu"
+        },{
+          "url": "http://weibo.com",
+          "tag": "Weibo"
+        },{
+          "url": "http://www.sina.com.cn",
+          "tag": "Sina"
+        },{
+          "url": "http://www.baidu.com",
+          "tag": "Baidu"
+        },{
+          "url": "http://www.sina.com.cn",
+          "tag": "Sina"
+        },{
+          "url": "http://www.baidu.com",
+          "tag": "Baidu"
+        },{
+          "url": "http://weibo.com",
+          "tag": "Weibo"
+        }]
+      });
+      tagCloud.spread();
+      btn.disabled = true;
+    })
   })(Saber)
 </script>
 </html>
