--- a/p/third/tagCloud/index.html
+++ b/p/third/tagCloud/index.html
@@ -16,13 +16,13 @@
 	<a target="_blank" href="http://vqun.github.io/p/ani" class="red">Animation</a>
 	<a target="_blank" href="http://vqun.github.io/p/dom" class="yellow">DOM Manipulate</a>
 	<a target="_blank" href="http://vqun.github.io/p/drag">Drag & Drop</a>
-	<a target="_blank" href="http://vqun.github.io/p/slider" class="blue">Easy Slider</target="_blank" a>
+	<a target="_blank" href="http://vqun.github.io/p/slider" class="blue">Easy Slider</a>
 
-	<target="_blank" a target="_blank" href="http://vqun.github.io/p/menu">下拉菜单</a>
+	<a target="_blank" a target="_blank" href="http://vqun.github.io/p/menu">下拉菜单</a>
 	<a target="_blank" href="http://vqun.github.io/p/ani" class="blue">动画</a>
 	<a target="_blank" href="http://vqun.github.io/p/dom" class="blue">DOM操作</a>
 	<a target="_blank" href="http://vqun.github.io/p/menu">Easy Menu</a>
-	<a target="_blank" href="http://vqun.github.io/p/ani" class="yellow">Animation</a>target="_blank" 
+	<a target="_blank" href="http://vqun.github.io/p/ani" class="yellow">Animation</a>
 	<a target="_blank" href="http://vqun.github.io/p/dom" class="red">DOM Manipulate</a>
 	<a target="_blank" href="http://vqun.github.io/" class="blue">Vqun</a>
 </div>
