--- a/p/slider/index.html
+++ b/p/slider/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Slider</title>
 	<link rel="stylesheet" type="text/css" href="slider.css">
+	<link rel="stylesheet" type="text/css" href="../../css/thinking.css">
 </head>
 <body>
 	<section>
@@ -19,6 +20,18 @@
 		    </ul>
 		</div>
 	</section>
+
+	<div class="thinking">
+		<h2>基本思路</h2>
+		<ol>
+			<li>搞个定时器，修改容器的left值</li>
+			<li>检测队列中的第一个元素是否离开视野（<em>left值小于或等于first element的width</em>）</li>
+			<li>是：将first element移到队列最后（last element）并<em>重置left值为0</em></li>
+			<li>不是：将left值加个Δleft；继续修改left</li>
+			<li>将first element移到最后，直接调用parent的appendChild方法，即<em>parent.appendChild(firstElement)</em></li>
+			<li>其他：都忒么是浮云了，就不纠结</li>
+		</ol>
+	</div>
 </body>
 <script type="text/javascript" src="../../saber/utils.js"></script>
 <script type="text/javascript">
