--- a/p/invite/index.html
+++ b/p/invite/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Recomment</title>
 	<link rel="stylesheet" href="./index.css">
+	<link rel="stylesheet" type="text/css" href="../../css/thinking.css">
 </head>
 <body>
 	<div class="invite_module">
@@ -29,6 +30,19 @@
 			-->
 			<br class="clear" />
 		</div>
+	</div>
+
+	<div class="thinking">
+		<h2>基本思路</h2>
+		<ol>
+			<li>没有使用第三方框架或库，<em>纯JS实现</em></li>
+			<li>推荐人选结构：使用<em>自定义列表dl</em>来实现，做了<em>float:left</em></li>
+			<li>邀请回答/收回邀请：使用<em>position:absolute</em>相对于低级dl定位</li>
+			<li>搜索框：只做了focus和blur事件处理，focus时，IE8及以下默认文字消息，其他浏览器使用placeholder；blur时，做输入值的trim处理，若为空串，还原为默认值，否则保持trim后的值</li>
+			<li>邀请回答/收回邀请功能：用事件代理实现，事件绑定在父级；通过自定义属性<em>data-action</em>和<em>data-info</em>来分别确定<em>是否在处理邀请</em>和<em>邀请类型（邀请/回收）</em></li>
+			<li>邀请变换为收回时，使用了CSS3的animation特性做渐进增强</li>
+			<li>其他：<em>IE6及以上、Chrome、Firefox等均可正常使用，但是，不保证各浏览器长得完全一样</em>；P.S.原数据中有一个图片地址http://octodex.github.com/images/FIRSTocat错误，修改为http://octodex.github.com/images/Robotocat.png（在官网http://octodex.github.com找的）</li>
+		</ol>
 	</div>
 </body>
 <script type="text/javascript" src="./invite_panel.json"></script>
