add quick sort and code highlight

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div ref="home" style="display:none;">
       <article>
         <h1>欢迎</h1>
-        <p>这是vQun的博客。所有此站下的都是由本人的前端技术之结晶。</p>
+        <p>这是vQun的博客。</p>
       </article>
       <article>
         <h1>Welcome</h1>
-        <p>This is vQun's blog. It is produced all by myself with my own font-end tech.</p>
+        <p>This is vQun's blog.</p>
       </article>
     </div>
     <div ref="about" style="display:none;">
@@ -52,7 +52,7 @@
     <div ref="projects" style="display:none;">
       <article>
         <h1>项目</h1>
-        <p>有简单，有趣，有意义的东西，充满个人想法。</p>
+        <p>有简单，有趣，有意义的东西。</p>
       </article>
       <article>
         <h1>Projects</h1>
