--- a/p/highlight/index.html
+++ b/p/highlight/index.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="../../css/plugins/codeHighlight.css">
 </head>
 <body>
-	<ol class="codeHighlight" id="container">
-	</ol>
-	<textarea id="codeHighlightTest" style="margin-top:20px;height: 40em;width:50em;">
-// 敲敲试试哈。。。代码高亮初期
+	<div style="margin:2em auto;width:65em;">
+		<textarea id="codeHighlightTest" style="height: 35em;width:30em;float:left;padding: 1em;">
+// 敲敲试试哈。。。代码高亮改进
+// P.S. 没有对注释做任何判断，也就是说，注释也会被当作代码处理
 var txt = Saber.$("codeHighlightTest");
 var container = Saber.$("container");
 var codes = new Saber.CodeHighlight(txt);
@@ -20,8 +20,25 @@ Saber.on(txt, "keyup", function(evt) {
 	inputing = setTimeout(function() {
 		codes.update();
 	}, 100)
-})
-	</textarea>
+});
+
+// 1. 字符串：黑红
+"Hehe to Death"
+// 2. 关键字：蓝色
+var str0 = new String();
+// 3. JS方法（定义或调用，不含申明）：黄色
+function Hehe() {}
+Hehe();
+// 4. JS对象：绿色
+Saber.on(txt, "keyup", function(evt) {})
+// 5. JS属性：粉色
+Saber.str.trim();
+Saber.utils.ani.animate()
+		</textarea>
+		<ol class="codeHighlight" id="container" style="float:left;margin-left:2em;width:auto;">
+		</ol>
+		<br style="clear:both;" />
+	</div>
 </body>
 <script type="text/javascript" src="../../saber/utils.js"></script>
 <script type="text/javascript" src="../../js/plugins/codeHighlight.js"></script>
